# src/entities/courses.entity.ts
@@ -1,0 +1,21 @@
+import { Entity, Column } from 'typeorm';
+import { BasePgEntity } from '../common/BaseEntity';
+import { ICourses } from '../interfaces/courses.interface';
+
+@Entity('courses')
+export class CourseEntity extends BasePgEntity implements ICourses {
+  @Column({ type: 'varchar' })
+  course_name: string;
+
+  @Column({ type: 'varchar' })
+  teacher_name: string;
+
+  @Column({ type: 'bigint' })
+  start_time: number;
+
+  @Column({ type: 'varchar' })
+  start_hour: string;
+
+  @Column({ type: 'text', array: true, nullable: false })
+  public weeks: string[];
+}
